# transportation-1

./: .gitignore  AGENTS.md  CMakeLists.txt  NOTES.md  README.md
results/: arcflags_regions-32-partition-inertial-threads-8_poland_20260611T150905.json  ch_ch_poland_20260611T141921.json  ch_e4-d2-q1-o1-s0-v0-hops2-3-3-3-5-10_poland_20260611T144257.json  ch_lazy_edgediff_dach_20260611T023320.json  chase_core-0-05-regions-64-partition-inertial-threads-8_poland_20260611T195650.json  hl_label-fraction-0-1_poland_20260612T062030.json  tnr-af_transit-16384-threads-8_poland_20260612T063040.json  tnr_transit-16384-threads-8_poland_20260612T050121.json
scripts/: download_europe_map.sh
src/algorithms/: astar.cpp  astar.hpp  bidirectional_astar.cpp  bidirectional_astar.hpp  bidirectional_dijkstra.cpp  bidirectional_dijkstra.hpp  contraction_hierarchy.cpp  contraction_hierarchy.hpp  dijkstra.cpp  dijkstra.hpp  heap_node.hpp  partition.cpp  partition.hpp  phast.cpp  phast.hpp  routing_algorithm.hpp  routing_algorithm_factory.cpp  routing_algorithm_factory.hpp  stamped_vector.hpp
src/algorithms/alt/: alt.cpp  alt.hpp  landmarks.cpp  landmarks.hpp
src/algorithms/arcflags/: arc_flags.cpp  arc_flags.hpp
src/algorithms/ch/: ch_io.cpp  ch_io.hpp  contraction_hierarchy.cpp  contraction_hierarchy.hpp  node_order.cpp  node_order.hpp  witness_search.cpp  witness_search.hpp  work_graph.cpp  work_graph.hpp
src/algorithms/chase/: chase.cpp  chase.hpp
src/algorithms/hl/: hub_labels.cpp  hub_labels.hpp
src/algorithms/tnr/: tnr.cpp  tnr.hpp  tnr_af.cpp  tnr_af.hpp
src/apps/: bench_utils.hpp  benchmark_main.cpp  ch_measure_main.cpp  import_main.cpp  measure_main.cpp  query_main.cpp  write_benchmark_graph.cpp
src/graph/: graph.cpp  graph.hpp  reverse_graph.cpp  reverse_graph.hpp  types.hpp
src/routing/: routing.hpp
tests/: routing_algorithms_test.cpp
